kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: python-learning
  name: python-learning
