kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-learning
  name: python-learning
spec:
  progressDeadlineSeconds: 30
  replicas: 2
  selector:
    matchLabels:
      app: python-learning
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-learning
    spec:
      containers:
      - image: python-learning-image
        imagePullPolicy: Always
        name: python-learning
        resources:
          limits:
            cpu: "750m"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 3
